Version MOD 1.0.1
-----------------
-Added: Support for UTF-8 with intraFont (many thanks to nextos!!!) 
-Fixed: corrupted graphic using intraFont
-Fixed: MP3/ATRAC3+ playback under kernel 3.xx (sorry, I didn't test it before)
-Fixed: crash in MP3 playback after some seconds
-Fixed: message boxes work now.


Version MOD 1.0.0
-----------------

-Added: oslSetReadKeysFunction(int (*sceCtrlReadBufferPositive)(SceCtrlData *pad_data, int count));
        You can pass to it a function from a kernel prx, so you'll be able to read all buttons (VOLUME_UP, NOTE...)
        oslUnsetReadKeysFunction();
-Added: All USB.c functions now works
-Added: OSL_VERSION
-Added: oslSetHoldForAnalog
-Added: support for intraFont.
-Added: Dialogs (message, error and net conf)
-Added: On Screen Keyboard
-Added: Save and load
-Fixed: Tagged MP3 and ATRAC3+ now works
-Fixed: osl_keys->analogToDPadSensivity now works correctly